tests/ui/root_namespace.stderr
error: expected expression, found `]`
 --> $DIR/tests/ui/root_namespace.rs:9:19
  |
9 |     #[namespace = ]
  |                   ^ expected expression
